--- a/about.html
+++ b/about.html
@@ -55,11 +55,7 @@
         <div class="logo_row row m0">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-6">
-                        <a href="index.html" class="logo">
-                            <img src="images/logo.png" alt="SeoWave | One-Stop Digital Marketing">
-                        </a>
-                    </div>
+                    <div class="col-sm-6"> <a href="index.html" class="logo"><h1 style="color:#52964B;">BullPenny</h1></a> </div>
                     <div class="col-sm-6">
                         <ul class="nav">
                             <li><a href="#"><span class="icon phone"></span><span class="first-word">Call</span>: +(61) 123 456 7890</a></li>
@@ -117,6 +113,8 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <h2>We Love Doing What We Do!</h2>
+                        <p style="font-size:15px;">We’re a group of friends who happen to be experienced multi-disciplinary strategists, creatives, and developers with shared vision for what we do and how we do it.</p>
+                        
                         <p style="font-size:15px;">It's a pre-requisite for joining our team. And while that means we're full of passionate people – from geeks to creatives to process masters – that passion is guided. Hard work and incredible challenges aren't a chore, but exciting. Everyone is focussed on doing a brilliant job every time. Oh, and we have loads of fun along the way. </p>
                         <ul class="nav">
                             <li><img src="images/icons/about/4.png" alt=""><b>Web applications should transform your business.</b> We're not just interested in making your current system better. We're interested in developing software that takes your entire organization to the next level. Custom software should provide truly transformative solutions.</li>
@@ -229,84 +227,32 @@
                 </div>
             </div>
         </div>
-        <div class="row m0 our_clients">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-3">
-                        <div class="row m0">
-                            <h2>Our Clients</h2>
-                            <p>Eaque ipsa quae ab illo inventore veritati quasi.</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-9">
-                        <div class="row">
-                            <div class="owl-carousel clients_carousel">
-                                <div class="item"><img src="images/about/clients/1.png" alt=""></div>
-                                <div class="item"><img src="images/about/clients/2.png" alt=""></div>
-                                <div class="item"><img src="images/about/clients/3.png" alt=""></div>
-                                <div class="item"><img src="images/about/clients/4.png" alt=""></div>
-                                <div class="item"><img src="images/about/clients/1.png" alt=""></div>
-                                <div class="item"><img src="images/about/clients/2.png" alt=""></div>
-                                <div class="item"><img src="images/about/clients/3.png" alt=""></div>
-                                <div class="item"><img src="images/about/clients/4.png" alt=""></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row m0 testimonials contentRow">
-            <div class="container">
-                <div class="row">                                       
-                    <div class="row m0 title_row">
-                        <h2>Why Clients Love Us</h2>
-                        <h5>voluptatem accusantium doloremque laudantium totam aperiam</h5>
-                    </div>
-                    <div class="row m0">
-                        <div class="col-sm-6 testimonial">
-                            <div class="media">
-                                <div class="media-left">
-                                    <a href="#"><img src="images/about/clients/c1.jpg" alt=""></a>
-                                </div>
-                                <div class="media-body">
-                                    <div class="inner row m0">
-                                        <div class="blockquote">Laudantium, totam rem aperi, eaque ipsa quaea ab illo invente veritatis et quasi architecto sach beatae vitae dicta sunt explicab.</div>
-                                        <div class="row m0 review">
-                                            <i class="fa fa-star-o starred"></i>
-                                            <i class="fa fa-star-o starred"></i>
-                                            <i class="fa fa-star-o starred"></i>
-                                            <i class="fa fa-star-o"></i>
-                                            <i class="fa fa-star-o"></i>
-                                        </div>
-                                        <div class="row m0 identity">Auro Navanth <span class="pos">(CEO of Clsscio)</span></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 testimonial">
-                            <div class="media">
-                                <div class="media-left">
-                                    <a href="#"><img src="images/about/clients/c2.jpg" alt=""></a>
-                                </div>
-                                <div class="media-body">
-                                    <div class="inner row m0">
-                                        <div class="blockquote">Laudantium, totam rem aperi, eaque ipsa quaea ab illo invente veritatis et quasi architecto sach beatae vitae dicta sunt explicab.</div>
-                                        <div class="row m0 review">
-                                            <i class="fa fa-star-o starred"></i>
-                                            <i class="fa fa-star-o starred"></i>
-                                            <i class="fa fa-star-o starred"></i>
-                                            <i class="fa fa-star-o starred"></i>
-                                            <i class="fa fa-star-o"></i>
-                                        </div>
-                                        <div class="row m0 identity">steaven Amith <span class="pos">(Co founder of Aft)</span></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+          <div class="row m0 our_clients">
+              <div class="container">
+                  <div class="row">
+                      <div class="col-sm-3">
+                          <div class="row m0">
+                              <h2>Our Development Kit</h2>
+                              <p>Some of the Frameworks and Tools that we are living with.</p>
+                          </div>
+                      </div>
+                      <div class="col-sm-9">
+                          <div class="row">
+                              <div class="owl-carousel clients_carousel">
+                                  <div class="item" style="margin-left:40px;"><img src="images/kit/7.png" alt=""></div>
+                                  <div class="item" style="margin-right:20px;"><img src="images/kit/8.png" alt=""></div>
+                                  <div class="item" style="margin-right:20px;"><img src="images/kit/3.png" alt=""></div>
+                                  <div class="item" style="margin-right:20px;"><img src="images/kit/1.png" alt=""></div>
+                                  <div class="item" style="margin-right:20px;"><img src="images/kit/5.png" alt=""></div>
+                                  <div class="item" style="margin-right:20px;"><img src="images/kit/4.png" alt=""></div>
+                                  <div class="item" style="margin-right:20px;"><img src="images/kit/6.png" alt=""></div>
+                                  <div class="item" style="margin-right:20px;"><img src="images/kit/2.png" alt=""></div>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
     </section>
     
     <footer class="row">
@@ -317,7 +263,7 @@
                         <div class="row m0">
                             <h4 class="title">About Company</h4>
                             <div class="row m0 body">
-                                <p>Aoluptas sit aspernatur aut odit aut fugit, sed quias consequuntur magni dolores eos qui ratione volust  luptatem sequi nesciunt. Neque porro quisquam est qui dolorem ipsum quiala.</p><br>
+                                <p>We’re a group of friends who happen to be experienced multi-disciplinary strategists, creatives, and developers with shared vision for what we do and how we do it.</p><br>
                                 <ul class="nav socials">
                                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
