--- a/services-details-cms.html
+++ b/services-details-cms.html
@@ -55,11 +55,7 @@
         <div class="logo_row row m0">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-6">
-                        <a href="index.html" class="logo">
-                            <img src="images/logo.png" alt="SeoWave | One-Stop Digital Marketing">
-                        </a>
-                    </div>
+                    <div class="col-sm-6"> <a href="index.html" class="logo"><h1 style="color:#52964B;">BullPenny</h1></a> </div>
                     <div class="col-sm-6">
                         <ul class="nav">
                             <li><a href="#"><span class="icon phone"></span><span class="first-word">Call</span>: +(61) 123 456 7890</a></li>
@@ -190,7 +186,7 @@
                         <div class="row m0">
                             <h4 class="title">About Company</h4>
                             <div class="row m0 body">
-                                <p>Aoluptas sit aspernatur aut odit aut fugit, sed quias consequuntur magni dolores eos qui ratione volust  luptatem sequi nesciunt. Neque porro quisquam est qui dolorem ipsum quiala.</p><br>
+                                <p>We’re a group of friends who happen to be experienced multi-disciplinary strategists, creatives, and developers with shared vision for what we do and how we do it.</p><br>
                                 <ul class="nav socials">
                                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
