--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>SEOWAVE | One-Stop Digital Marketing</title>
+<title>BULLPENNY | CUSTOM SOFTWARE DEVELOPMENT</title>
 
 <!--Favicons-->
 <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
@@ -145,7 +145,7 @@
                   data-endelementdelay="0.1" 
                   data-endspeed="300" 
                   data-captionhidden="on"
-                  style="color: #232323; font-size: 18px;   font-family: 'Droid Serif', serif; font-style:italic; font-weight: normal; "> Through better marketing today</div>
+                  style="color: #232323; font-size: 18px;   font-family: 'Droid Serif', serif; font-style:italic; font-weight: normal; "> Through better services today</div>
           
           <!-- Layer -->
           <div class="tp-caption sft tp-resizeme" 
@@ -161,7 +161,7 @@
                   data-endelementdelay="0.1" 
                   data-endspeed="300" 
                   data-captionhidden="on"
-                  style="z-index: 10;"> <a href="#." class="borderred_link">purchase now!</a> </div>
+                  style="z-index: 10;"> <a href="services.html" class="borderred_link">services</a> </div>
           
           <!-- Layer -->
           <div class="tp-caption sft tp-resizeme rs-parallaxlevel-4" 
@@ -335,7 +335,7 @@
             Our Services</h2>
           <h5 class="sub_heading">Creativity. We make it personal.</h5>
           <p class="about">We offer wide range of digital and development services delivered with a personal experience.</p>
-          <a href="#" class="subscribe_btn btn">get a free quote</a> </div>
+          <a href="#" class="subscribe_btn btn">Our Work</a> </div>
         <div class="media-body services_secs col-sm-7 col-md-9">
           <div class="col-sm-4 service_box">
             <div class="row service_box_inner">
