--- a/services-details-mobile.html
+++ b/services-details-mobile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SEOWAVE | One-Stop Digital Marketing</title>
+    <title>BULLPENNY | CUSTOM SOFTWARE DEVELOPMENT</title>
     
     <!--Favicons-->
     <link rel="apple-touch-icon" sizes="57x57" href="favicon/apple-icon-57x57.png">
@@ -129,7 +129,7 @@
                                    </ul>
                                </div>
                            </div>
-                           <div class="fright big_img"><img src="images/icons/services/details/big.jpg" alt="" class="img-responsive"></div>
+                           <div class="fright big_img"><img src="images/icons/services/details/mobile.jpg" alt="" class="img-responsive"></div>
                        </div>
                        <div class="row m0">
                            <h4 class="sv_subtitle">What We Love To Do:</h4>
