--- a/index.html
+++ b/index.html
@@ -518,13 +518,13 @@
       </div>
       <div class="row recentCaseStudies">
         <div class="col-md-4">
-          <div class="case row m0"> <a href="case-studies-details.html" class="img_link"><img src="images/case/1.jpg" alt="" class="img-responsive"></a> <a href="case-studies-details.html" class="text_link">View details <i class="fa fa-angle-right"></i></a> </div>
+          <div class="case row m0"> <a href="work_paleta.html" class="img_link"><img src="images/case/paleta.jpg" alt="" class="img-responsive"></a> <a href="work_paleta.html" class="text_link">View details <i class="fa fa-angle-right"></i></a> </div>
         </div>
         <div class="col-md-4">
-          <div class="case row m0"> <a href="case-studies-details.html" class="img_link"><img src="images/case/3.jpg" alt="" class="img-responsive"></a> <a href="case-studies-details.html" class="text_link">View details <i class="fa fa-angle-right"></i></a> </div>
+          <div class="case row m0"> <a href="work_vera.html" class="img_link"><img src="images/case/vera.jpg" alt="" class="img-responsive"></a> <a href="work_vera.html" class="text_link">View details <i class="fa fa-angle-right"></i></a> </div>
         </div>
         <div class="col-md-4">
-          <div class="case row m0"> <a href="case-studies-details.html" class="img_link"><img src="images/case/4.jpg" alt="" class="img-responsive"></a> <a href="case-studies-details.html" class="text_link">View details <i class="fa fa-angle-right"></i></a> </div>
+          <div class="case row m0"> <a href="work_paleta.html" class="img_link"><img src="images/case/4.jpg" alt="" class="img-responsive"></a> <a href="work_paleta.html" class="text_link">View details <i class="fa fa-angle-right"></i></a> </div>
         </div>
       </div>
     </div>
