--- a/work.html
+++ b/work.html
@@ -117,58 +117,20 @@
                 <ul id="filters" class="list-inline">
                     <li data-filter="*" class="active">All</li>
                     <li data-filter=".ecommerce">Ecommerce</li>
-                    <li data-filter=".featured">featured</li>
-                    <li data-filter=".seo">seo</li>
-                    <li data-filter=".technology">technology</li>
+                    <li data-filter=".web">Web Dev</li>
                 </ul>
             </div>
             <div class="row" id="caseStdudies">
                 <div class="case ecommerce">
                     <div class="row m0">
-                        <a href="case-studies-details.html" class="img_link"><img src="images/case/1.jpg" alt="" class="img-responsive"></a>
-                        <a href="case-studies-details.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
+                        <a href="work_paleta.html" class="img_link"><img src="images/case/paleta.jpg" alt="" class="img-responsive"></a>
+                        <a href="work_paleta.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
-                <div class="case seo">
+                <div class="case web">
                     <div class="row m0">
-                        <a href="case-studies-details.html" class="img_link"><img src="images/case/2.jpg" alt="" class="img-responsive"></a>
-                        <a href="case-studies-details.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
-                    </div>
-                </div>
-                <div class="case featured">
-                    <div class="row m0">
-                        <a href="case-studies-details.html" class="img_link"><img src="images/case/3.jpg" alt="" class="img-responsive"></a>
-                        <a href="case-studies-details.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
-                    </div>
-                </div>
-                <div class="case technology">
-                    <div class="row m0">
-                        <a href="case-studies-details.html" class="img_link"><img src="images/case/4.jpg" alt="" class="img-responsive"></a>
-                        <a href="case-studies-details.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
-                    </div>
-                </div>
-                <div class="case technology">
-                    <div class="row m0">
-                        <a href="case-studies-details.html" class="img_link"><img src="images/case/5.jpg" alt="" class="img-responsive"></a>
-                        <a href="case-studies-details.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
-                    </div>
-                </div>
-                <div class="case featured">
-                    <div class="row m0">
-                        <a href="case-studies-details.html" class="img_link"><img src="images/case/6.jpg" alt="" class="img-responsive"></a>
-                        <a href="case-studies-details.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
-                    </div>
-                </div>
-                <div class="case ecommerce">
-                    <div class="row m0">
-                        <a href="case-studies-details.html" class="img_link"><img src="images/case/7.jpg" alt="" class="img-responsive"></a>
-                        <a href="case-studies-details.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
-                    </div>
-                </div>
-                <div class="case featured ecommerce">
-                    <div class="row m0">
-                        <a href="case-studies-details.html" class="img_link"><img src="images/case/8.jpg" alt="" class="img-responsive"></a>
-                        <a href="case-studies-details.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
+                        <a href="work_vera.html" class="img_link"><img src="images/case/vera.jpg" alt="" class="img-responsive"></a>
+                        <a href="work_vera.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
             </div>
