--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container" style="display: none;">
       <div class="row text-center"> <a href="#" class="borderred_link quote_btn"><span class="lh45">get started now!</span></a> </div>
     </div>
   </div>
