index has been changed

--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
                                         <input type="url" class="form-control" name="contact_url" id="contact_url" required>
                                     </div>
                                     <div class="row m0">
-                                        <label for="learn_seowave">How did you learn about SEOWAVE</label>
+                                        <label for="learn_seowave">How did you learn about BULLPENNY</label>
                                         <select name="learn_seowave" id="learn_seowave" class="selectpicker form-control">
                                             <option value="0" disabled selected>-(Select)-</option>
                                             <option value="google">Google Search</option>
@@ -167,8 +167,12 @@
                                     <div class="row m0">
                                         <label for="interested_in">Which services are you interested in?</label>
                                         <select name="interested_in" id="interested_in" class="selectpicker form-control">
-                                            <option value="off_page">Off Page Optimization</option>
-                                            <option value="on_page">On Page Optimization</option>
+                                            <option value="off_page">Software Development</option>
+                                            <option value="on_page">Web Development</option>
+                                            <option value="on_page">Mobile Applications</option>
+                                            <option value="on_page">WordPress</option>
+                                            <option value="on_page">E-commerce</option>
+                                            <option value="on_page">Support</option>
                                         </select>
                                     </div>
                                 </div>
