--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
               <div class="row hover_box">
                 <div class="row m0 inner">
                   <h6>SOFTWARE DEVELOPMENT</h6>
-                  <div class="about"> We build custom business software and help our customers launch new online ventures. Our software development services come with all the help and support you could need to ensure your custom software project is successful and delivers a return to the business. </div>
+                  <div class="about"> We build custom business software and help our customers launch new online ventures. Our software development services come with all the help and support you could need to ensure your custom software project is successful and delivers large returns to our clients' business. </div>
                   <a href="services-details-software.html" class="read_more">Read More</a> </div>
               </div>
             </div>
@@ -355,7 +355,7 @@
               <div class="row hover_box">
                 <div class="row m0 inner">
                   <h6>WEB DEVELOMENT</h6>
-                  <div class="about"> Whatever the device, whatever the browser, our expertise makes sure your site always works beautifully.</div>
+                  <div class="about">Our excellence in software development and expertise will guarantee that your site will run without any issues on any platform and browser.</div>
                   <a href="services-details-web.html" class="read_more">Read More</a> </div>
               </div>
             </div>
@@ -368,7 +368,7 @@
               <div class="row hover_box">
                 <div class="row m0 inner">
                   <h6>MOBILE DEVELOPMENT</h6>
-                  <div class="about"> We’re not launching an app. We’re creating an experience, starting a business, following a dream.</div>
+                  <div class="about">Our app development team can help your ideas come to life. We can help lay the foundations to a new business and make a whole world of possibilities available to you with our technical expertise in mobile app development.</div>
                   <a href="services-details-mobile.html" class="read_more">Read More</a> </div>
               </div>
             </div>
@@ -381,7 +381,7 @@
               <div class="row hover_box">
                 <div class="row m0 inner">
                   <h6>E-COMMERCE</h6>
-                  <div class="about"> E-Commerce is more than what you sell. It’s the experience you deliver.</div>
+                  <div class="about">We have the tolls and knowledge to create and maintain website for E-commerce. Sell anything online to any customer of your choice. We'll do all the programming.</div>
                   <a href="services-details-ecommerce.html" class="read_more">Read More</a> </div>
               </div>
             </div>
@@ -394,7 +394,7 @@
               <div class="row hover_box">
                 <div class="row m0 inner">
                   <h6>WORDPRESS DEVELOPMENT</h6>
-                  <div class="about"> Duis aute irure dolor in reprehenderit voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</div>
+                  <div class="about">With the versatility and feature-rich capabilities of WordPress we have the tools for creating websites quickly and efficiently at our fingertip. Websites can be created faster and more stable. </div>
                   <a href="services-details.html" class="read_more">Read More</a> </div>
               </div>
             </div>
@@ -407,7 +407,7 @@
               <div class="row hover_box">
                 <div class="row m0 inner">
                   <h6>CONTENT MANAGEMENT & SUPPORT</h6>
-                  <div class="about"> Content is central to the customer experience.</div>
+                  <div class="about"> Completing a website doesn't mean it's finished. We are available to you for all technical support and management of your content for as long as needed.</div>
                   <a href="services-details-cms.html" class="read_more">Read More</a> </div>
               </div>
             </div>
@@ -422,15 +422,15 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <h2>How we Work!</h2>
-          <p>Creativity is crucial, but it's our overall approach that gives it the focus required to make it really work. </p>
+          <h2>Our Approach!</h2>
+          <p>We believe that exceptional teamwork and creative thinking are crucial components to success but our approach in particular is what helps us produce excellent results. </p>
           <ul class="nav">
             <li><img src="images/icons/about/4.png" alt="">COLLABORATIVE TEAMWORK.</li>
-            <li> <p>It might sound like a cliché, but our success is about teamwork. And while it's easy to talk about internal teamwork (our whole team work in-house and in close proximity to one another), it's the teamwork we enjoy with our clients that adds something special. Part of that comes down to attitude, part down to process. Go team!</p> </li>
+            <li> <p>Our success is about teamwork. We work in an open office and in close proximity to one another. our whole team works in-house and in and it's the teamwork and good relationships we enjoy with our clients that adds something special. We always strive to make the best work and help others do the same.</p> </li>
             <li><img src="images/icons/about/5.png" alt="">AGILE PROCESS.</li>
             <li> <p>We run all projects using 'agile'. An iterative process, it includes daily 'scrums' involving key stakeholders that deal with issues and opportunities as they arise, as well as continual communication within the agency. The result is a more reliable, comfortable and faster process – with better results.</p> </li>
             <li><img src="images/icons/about/6.png" alt="">ONGOING SUPPORT.</li>
-            <li> <p>Once your site is up and running beautifully, we won't just sit there admiring it. We'll run training sessions to make sure your staff are completely confident in 'driving' it (updating content for instance). We'll always be there if you have a question. And we'll come back with any other ideas we think could help you.</p> </li>
+            <li> <p>Once a site if finished we don't stop working. Continued support and maintenance can ensure that the work was worth it. Our support and maintenance after the web site's launch is what ensures high quality performance and lasting results.</p> </li>
           </ul>
         </div>
         <div class="col-sm-6">
