--- a/work.html
+++ b/work.html
@@ -118,6 +118,7 @@
                     <li data-filter="*" class="active">All</li>
                     <li data-filter=".ecommerce">Ecommerce</li>
                     <li data-filter=".web">Web Dev</li>
+                    <li data-filter=".wordpress">Word Press</li>
                 </ul>
             </div>
             <div class="row" id="caseStdudies">
@@ -131,6 +132,60 @@
                     <div class="row m0">
                         <a href="work_vera.html" class="img_link"><img src="images/case/vera.jpg" alt="" class="img-responsive"></a>
                         <a href="work_vera.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+                <div class="case wordpress ecommerce">
+                    <div class="row m0">
+                        <a href="work_modernt.html" class="img_link"><img src="images/case/modernt.jpg" alt="" class="img-responsive"></a>
+                        <a href="work_modernt.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+                <div class="case wordpress">
+                    <div class="row m0">
+                        <a href="work_matprat.html" class="img_link"><img src="images/case/matprat.jpg" alt="" class="img-responsive"></a>
+                        <a href="work_matprat.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+                <div class="case wordpress">
+                    <div class="row m0">
+                        <a href="work_maxtruck.html" class="img_link"><img src="images/case/maxtruck.jpg" alt="" class="img-responsive"></a>
+                        <a href="work_maxtruck.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+                <div class="case wordpress ecommerce">
+                    <div class="row m0">
+                        <a href="work_opus.html" class="img_link"><img src="images/case/opus.jpg" alt="" class="img-responsive"></a>
+                        <a href="work_opus.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+                <div class="case wordpress">
+                    <div class="row m0">
+                        <a href="work_dreher.html" class="img_link"><img src="images/case/dreher.jpg" alt="" class="img-responsive"></a>
+                        <a href="work_dreher.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+                <div class="case wordpress">
+                    <div class="row m0">
+                        <a href="work_energy.html" class="img_link"><img src="images/case/energy.jpg" alt="" class="img-responsive"></a>
+                        <a href="work_energy.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+                <div class="case wordpress">
+                    <div class="row m0">
+                        <a href="work_kidsy.html" class="img_link"><img src="images/case/kidsy.jpg" alt="" class="img-responsive"></a>
+                        <a href="work_kidsy.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+                <div class="case wordpress">
+                    <div class="row m0">
+                        <a href="work_selfdev.html" class="img_link"><img src="images/case/selfdev.jpg" alt="" class="img-responsive"></a>
+                        <a href="work_selfdev.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
+                    </div>
+                </div>
+                <div class="case wordpress">
+                    <div class="row m0">
+                        <a href="work_svealan.html" class="img_link"><img src="images/case/svealan.jpg" alt="" class="img-responsive"></a>
+                        <a href="work_svealan.html" class="text_link">View details <i class="fa fa-angle-right"></i></a>
                     </div>
                 </div>
             </div>
