--- a/work_maxtruck.html
+++ b/work_maxtruck.html
@@ -103,7 +103,7 @@
     
     <section class="row pageCover">
         <div class="container p0">
-            <h3 class="fleft">PALETA TEXTIL</h3>
+            <h3 class="fleft">Maxtruck</h3>
         </div>
     </section>
     
@@ -111,7 +111,7 @@
 
         <div class="row m0">
             <div class="container">
-                <div class="row image_1"><img src="images/project/paleta/1.png" alt="" class="img-responsive"></div>
+                <div class="row image_1"><img src="images/project/maxtruck/1.png" alt="" class="img-responsive"></div>
             </div>
         </div>
         <div class="row m0 trenz_master">
@@ -119,15 +119,15 @@
                 <div class="row">
                     <div class="col-sm-8">
                         <div class="row">
-                            <h2 class="trenz_master_title page_title">Paleta Textil</h2>
+                            <h2 class="trenz_master_title page_title">Maxtruck</h2>
                             <p>The websites are the first interface between the customers and the seller, your visit card, your best assistant, in short, the perceived image of your company. So your website needs to be designed in such a way that it should be easily handled and worked upon by customers without any hassles or confusion. A good design is a great way to communicate and get your point across and so it is definitely very important. Some websites, though, are unconventional, creatives, rich in visual effects. </p>
                         </div>
                     </div>
                     <div class="col-sm-3 col-sm-offset-1">
                         <div class="row">
-                            <div class="row m0"><span>Client:</span> Paleta Textil</div>
-                            <div class="row m0"><span>Project type:</span> E-commerce</div>
-                            <div class="row m0"><span>Website:</span> <a href="http://www.paletatextil.com" target="_blank">http://www.paletatextil.com</a></div>
+                            <div class="row m0"><span>Client:</span> Maxtruck</div>
+                            <div class="row m0"><span>Project type:</span> Word Press</div>
+                            <!-- <div class="row m0"><span>Website:</span> <a href="http://www.themeforest.com">http://www.paletatextil.com</a></div> -->
                         </div>
                     </div>
                 </div>
@@ -137,29 +137,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6">
-                        <h4>PRODUCT CATEGORIES</h4>
-                        <img src="images/project/paleta/2.png" alt="" class="img-responsive">
+                        <img src="images/project/maxtruck/2.png" alt="" class="img-responsive">
                     </div>
                     <div class="col-sm-6">
-                        <h4>CHECKOUT PAGE</h4>
-                        <img src="images/project/paleta/3.png" alt="" class="img-responsive">
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row m0 challenge">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-5">
-                        <div class="row">
-                            <h3>Custom Made Backend</h3>
-                            <p>Totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                            <h3>Solution</h3>
-                            <p>Aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, quiu dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quias non numquam eius modi tempora incidunt ut labore et dolore magnami aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatu Quis autem vel eum iureos.</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-sm-offset-1">
-                        <div class="row"><img src="images/project/paleta/4.png" alt="" class="img-responsive"></div>
+                        <img src="images/project/maxtruck/3.png" alt="" class="img-responsive">
                     </div>
                 </div>
             </div>
