--- a/work_vera.html
+++ b/work_vera.html
@@ -119,7 +119,7 @@
                 <div class="row">
                     <div class="col-sm-8">
                         <div class="row">
-                            <h2 class="trenz_master_title page_title">Paleta Textil</h2>
+                            <h2 class="trenz_master_title page_title">Vera W.</h2>
                             <p>The websites are the first interface between the customers and the seller, your visit card, your best assistant, in short, the perceived image of your company. So your website needs to be designed in such a way that it should be easily handled and worked upon by customers without any hassles or confusion. A good design is a great way to communicate and get your point across and so it is definitely very important. Some websites, though, are unconventional, creatives, rich in visual effects. </p>
                         </div>
                     </div>
